Adam tuning phase done for LH samples

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(0.93744405, dtype=float64)"
+       "Array(1.04712089, dtype=float64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(0.93744405, dtype=float64)"
+       "Array(1.04712089, dtype=float64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,15 +99,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([1.04740582e+00, 1.04685095e+00, 1.56712577e+03], dtype=float64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from run_adam_tune import run_adam_loop, batch_run_adam\n",
     "\n",
     "obj = lambda p : objective(loss_fn, p, y_out_sim, t_out, dt, data_ICs, KO)\n",
     "\n",
-    "batch_run_adam(jnp.array([1.01*params, 5*params, 10*params]), 1e-3, .9, .999, 100, obj)"
+    "batch_run_adam(jnp.array([1.01*params, 1.0001*params, 2*params]), 1e-3, .9, .999, 100, obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lhs_sampling import lh_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([1179.88251476, 1119.48839873,  383.26850638,  833.74952948,\n",
+       "         43.1409696 ], dtype=float64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pars = lh_samples(100)[50:55]\n",
+    "batch_run_adam(pars, 1e-3, .9, .999, 100, obj)"
    ]
   }
  ],
